--- a/config.yml
+++ b/config.yml
@@ -40,7 +40,7 @@ outputs:
         - JSON
 
 params:
-    env: development # to enable google analytics, opengraph, twitter-cards and schema.
+    env: production # to enable google analytics, opengraph, twitter-cards and schema.
     description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
     author: ["okoval"]
     # author: ["Me", "You"] # multiple authors
