--- a/config.yml
+++ b/config.yml
@@ -45,7 +45,7 @@ params:
     author: ["okoval"]
     # author: ["Me", "You"] # multiple authors
 
-    # defaultTheme: auto
+    defaultTheme: auto
     # disableThemeToggle: true
     ShowShareButtons: true
     ShowReadingTime: true
