--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 baseURL: "https://okoval.page/" # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
 title: okoval.page
 paginate: 5
-theme: PaperMod
+theme: "PaperMod"
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
