--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,4 @@
 baseURL: "https://okoval.page/"
-# relativeURLs: true
 title: okoval.page
 paginate: 5
 theme: PaperMod
@@ -41,6 +40,7 @@ outputs:
         - JSON
 
 params:
+    baseURL: "/"
     env: production # to enable google analytics, opengraph, twitter-cards and schema.
     author: ["okoval"]
     # author: ["Me", "You"] # multiple authors
