--- a/config.yml
+++ b/config.yml
@@ -90,9 +90,9 @@ params:
           url: "index.xml"
 
     editPost:
-        URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
-        Text: "Suggest Changes" # edit text
-        appendFilePath: true # to append file path to Edit link
+        URL: "https://github.com/KovalAlexey/okoval-page/tree/main/content/posts"
+        Text: "Запропонувати зміни" # edit text
+        appendFilePath: false # to append file path to Edit link
 
     # label:
     #     text: "Home"
