--- a/config.yml
+++ b/config.yml
@@ -75,7 +75,7 @@ params:
     homeInfoParams:
         Title: "okoval.page"
         Content: >
-            Вітаю тебе на моєму сайті. Це персональній блог створений заради спортивного інтересу. Якщо маєш бажання підписуйся на RSS Feed цього сайту, ласкаво прошу до моїх соціальниї мереж. Час від часу тут будуть пцблікуватись різноманітні пости суб'єктивної думки та тематики. Приємного перегляду
+            Вітаю тебе на моєму сайті. Це персональній блог створений заради спортивного інтересу. Якщо маєш бажання підписуйся на RSS Feed, ласкаво прошу до моїх соціальних мереж. Час від часу тут будуть публікуватись різноманітні пости та думки. Приємного перегляду
     socialIcons:
         - name: twitter
           url: "https://twitter.com/KovalAlexey"
